--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,9 @@
 @font-face {
   font-family: "Lato-Bold";
   src: local("Lato-Bold"), url("../fonts/Lato-Bold.ttf") format("truetype");
+  font-weight: bold;
 }
+
 body {
-  font-family: "Lato-Bold";
+  font-family: "Lato-Bold", sans-serif;
 }
